gccida/c0/pent_uv_unit_ready_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7489:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 7902, "pent_uv_unit_ready_cost"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7489:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 7902, "pent_uv_unit_ready_cost"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7535:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[1], VOIDmode) || ix86_cpu != PROCESSOR_PENTIUM ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7545:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) || ix86_cpu != PROCESSOR_PENTIUM ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7570:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !memory_operand( recog_data_0.operand[1], VOIDmode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7731:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !q_regs_operand( recog_data_0.operand[0], QImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7736:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !q_regs_operand( recog_data_0.operand[0], QImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7741:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !q_regs_operand( recog_data_0.operand[0], QImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7748:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !q_regs_operand( recog_data_0.operand[0], QImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7761:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative || memory_operand( recog_data_0.operand[1], VOIDmode) || ix86_cpu != PROCESSOR_PENTIUM ) 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:7769:49: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 1 && !memory_operand( recog_data_0.operand[1], VOIDmode) && ix86_cpu == PROCESSOR_PENTIUM ) 
                                                ^~~~~~~~~~~~
                                                recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:8045:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& incdec_operand( recog_data_0.operand[2], DImode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:8052:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| incdec_operand( recog_data_0.operand[2], DImode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:8057:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& incdec_operand( recog_data_0.operand[2], DImode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:8064:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| incdec_operand( recog_data_0.operand[2], DImode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:8069:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !incdec_operand( recog_data_0.operand[2], DImode) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:8075:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( incdec_operand( recog_data_0.operand[2], DImode) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:8078:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( !incdec_operand( recog_data_0.operand[2], DImode) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/insn-attrtab.c:8107:20: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& incdec_operand( recog_data_0.operand[2], SImode) 
                   ^~~~~~~~~~~~
                   recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/pent_uv_unit_ready_cost/src/obj/insn-attrtab.o] Error 1
